# Embedded-Final-Project-2019

./: .gitignore  CMakeLists.txt  Makefile  README.md  TASKS.md  app.c  client.c  client.h  copy-from-rpz.sh  copy-to-rpz.sh  main.c  server.c  server.h  utils.c  utils.h
Project 1/: CMakeLists.txt  main.c  sampling_cputime.c  sampling_cputime.h  sampling_gettimeofday.c  sampling_gettimeofday.h  stats.c  stats.h
Project 1/matlab/: plot_data.m  read_data.m
Project 1/report/: report.odt
Project 2 - Final/clion/: README.md  copy-to-rpz.sh  main.c
Project 2 - Final/clion/include/: communication.h  types.h
Project 2 - Final/clion/src/: CMakeLists.txt  client.c  communication.c  server.c
Project 2 - Final/clion/test/final_tests/: UtilsTest.cpp
Project 2 - Final/include/: utils.h
c/: client.c  server.c  utils.c
h/: utils.h
include/: client.h  conf.h  log.h  server.h  types.h  utils.h
report/: 9026.odt
src/: CMakeLists.txt  client.c  communication.c  log.c  server.c  utils.c
src/c/: CMakeLists.txt  server.c  utils.c
test/: CMakeLists.txt
test/final_tests/: CMakeLists.txt  ServerTest.cpp  UtilsTest.cpp  run.c  test_utils.c  test_utils.h
test/lib/: README.md
